# orsa_py_wrapper

./: Dockerfile  README.md  README.txt  main.py  orsa.py  requirements.txt
src/: CMakeLists.txt
src/demo/: CMakeLists.txt  all.h  liborsa.cpp  liborsa.h  wrapper_orsa.c  wrapper_orsa.h
src/demo/libImage/: CMakeLists.txt  image_io.cpp
src/extras/libNumerics/: CMakeLists.txt
src/extras/sift/: CMakeLists.txt  demo_lib_sift.cpp  filter.cpp
src/libOrsa/: CMakeLists.txt
